--- a/.github/workflows/weather_action.yml
+++ b/.github/workflows/weather_action.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           brew install gdal
       - name: Install dependencies and packages
-        run: Rscript -e 'install.packages(c("tidyverse","stringr","readr","dplyr","tidyr","sf","leaflet","htmlwidgets", "htmltools","leaflet.providers","leaflet.extras", "here", "readxl", "rvest"))'
+        run: Rscript -e 'install.packages(c("tidyverse","stringr","readr","dplyr","tidyr","sf","leaflet","htmlwidgets", "htmltools","leaflet.providers","leaflet.extras", "here", "readxl", "rvest", "janitor"))'
       - name: Get reservoir and snowpack info
         run: Rscript scripts/Reservoirs.R
       - name: Commit results
