--- a/.github/workflows/python_action.yml
+++ b/.github/workflows/python_action.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Install all necessary packages
         run: pip install requests beautifulsoup4 pandas webdriver-manager selenium time urllib re plotly.express datetime timedelta plotly.graph_objects plotly.io numpy json_normalize 
       - name: Run the scraping script
-        run: python scripts/scraper.py
+        run: python scripts/precip_scraper.py
