--- a/.github/workflows/python_action.yml
+++ b/.github/workflows/python_action.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Install a new Chromium
         run: sudo apt install -y chromium-browser
       - name: Install all necessary packages
-        run: pip install requests beautifulsoup4 pandas webdriver-manager selenium time urllib re plotly.express datetime timedelta plotly.graph_objects plotly.io numpy json_normalize 
+        run: pip install requests beautifulsoup4 pandas webdriver-manager selenium urllib re plotly.express datetime timedelta plotly.graph_objects plotly.io numpy json_normalize 
       - name: Run the scraping script
         run: python scripts/precip_scraper.py
