--- a/.github/workflows/python_action.yml
+++ b/.github/workflows/python_action.yml
@@ -23,3 +23,11 @@ jobs:
         run: pip3 install requests beautifulsoup4 pandas webdriver-manager selenium plotly.express datetime timedelta numpy json_normalize
       - name: Run the scraping script
         run: python scripts/precip_scraper.py
+      - name: Commit and push if content changed
+        run: |-
+          git config user.name "Automated"
+          git config user.email "actions@users.noreply.github.com"
+          git add -A
+          timestamp=$(date -u)
+          git commit -m "Latest data: ${timestamp}" || exit 0
+          git push
