--- a/.github/workflows/python_action.yml
+++ b/.github/workflows/python_action.yml
@@ -15,6 +15,12 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.12'
+      - name: 'setup-chromedriver'
+        uses: nanasess/setup-chromedriver@v2
+      - run: |
+            export DISPLAY=:99
+            chromedriver --url-base=/wd/hub &
+            sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
       - name: Installed package list
         run: apt list --installed
       - name: Remove Chrome
