--- a/.github/workflows/python_action.yml
+++ b/.github/workflows/python_action.yml
@@ -15,12 +15,6 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.12'
-      - name: 'setup-chromedriver'
-        uses: nanasess/setup-chromedriver@v2
-      - run: |
-            export DISPLAY=:99
-            chromedriver --url-base=/wd/hub &
-            sudo Xvfb -ac :99 -screen 0 1280x1024x24 > /dev/null 2>&1 & # optional
       - name: Installed package list
         run: apt list --installed
       - name: Remove Chrome
@@ -30,7 +24,7 @@ jobs:
       - name: Install a new Chromium
         run: sudo apt install -y chromium-browser
       - name: Install all necessary packages
-        run: pip3 install requests beautifulsoup4 pandas webdriver-manager --upgrade chromedriver-autoinstaller selenium plotly.express datetime timedelta numpy json_normalize
+        run: pip3 install requests beautifulsoup4 pandas webdriver-manager --upgrade chromedriver-autoinstaller selenium --upgrade plotly.express datetime timedelta numpy json_normalize
       - name: Run the scraping script
         run: python scripts/precip_scraper.py
       - name: Commit and push if content changed
