--- a/.github/workflows/python_action.yml
+++ b/.github/workflows/python_action.yml
@@ -17,6 +17,8 @@ jobs:
           python-version: '3.12'
       - name: Installed package list
         run: apt list --installed
+      - uses: browser-actions/setup-chrome@v1
+      - run: chrome --version
       - name: Remove Chrome
         run: sudo apt purge google-chrome-stable
       - name: Remove default Chromium
