--- a/.github/workflows/python_action.yml
+++ b/.github/workflows/python_action.yml
@@ -19,7 +19,7 @@ jobs:
         run: apt list --installed
       - uses: browser-actions/setup-chrome@v1
         with:
-            chrome-version: 120
+            chrome-version: stable
       - name: Remove Chrome
         run: sudo apt purge google-chrome-stable
       - name: Remove default Chromium
